--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,35 @@
+body {
+    margin-top: 0;
+}
 header {
+    margin-left: 150px;
     background-color: #ffffff;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    border: solid 1px #cccccc;
+}
+h1 {
+    background-color: #4aaaa5;
+    padding: 30px;
+    margin: 0;
+    width:245px;
 }
 h2 {color: #4aaaa5;
+    margin: 0;
+    padding: 15px;
+    border-bottom: solid 2px #dddddd;
 }
-.main-bio {
+#main-bio {
     background-color:#ffffff;
+    border: solid 2px #dddddd;
+    margin: 0;
+    padding: 10px;
+}
+#bio-image {
+    width: 240px;
+    height: 320px;
+    padding-top: 20px;
+}
+.container {
+    width: 960px;
+
 }
