--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,9 @@ h2 {color: #4aaaa5;
 #main-bio {
     background-color:#ffffff;
     border: solid 2px #dddddd;
-    margin: 0;
+    margin-left: 150px;
     padding: 10px;
-}
+}    
 #bio-image {
     width: 240px;
     height: 320px;
@@ -31,5 +31,6 @@ h2 {color: #4aaaa5;
 }
 .container {
     width: 960px;
-
+}
+p {  font-family: Arial, Helvetica, sans-serif;
 }
