--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,9 @@ header {
 }
 h1 {
     background-color: #4aaaa5;
-    padding: 30px;
+    padding: 25px;
     margin: 0;
-    width:245px;
+    width:235px;
 }
 h2 {color: #4aaaa5;
     margin: 0;
@@ -33,4 +33,8 @@ h2 {color: #4aaaa5;
     width: 960px;
 }
 p {  font-family: Arial, Helvetica, sans-serif;
+}
+#id {
+    color:black;
+    text-align: right;
 }
