--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -6,16 +6,26 @@ header {
 body {
     background-image: url(https://img.freepik.com/free-vector/blue-abstract-acrylic-brush-stroke-textured-background_53876-86373.jpg?size=626&ext=jpg)
 }
-h1 {color:}
 h2 {
     color:#4aaaa5;
 }
 nav {
-    color: #777777;
     float: right;
     font-family: Arial, Helvetica, sans-serif;
 }
 p {
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
+}
+.container {
+    width: 960px;
+    height: auto;
+    background-color:#ffffff;
+    border: solid 2px #dddddd;
+    padding-left: 20px;
+    padding-bottom: 20px;  
+    margin: auto;
+}
+button {background-color:#4aaaa5;
+color: white;
 }
