--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -2,6 +2,7 @@ header {
     background-color: #ffffff;
     border: 3px solid #cccccc;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-bottom:50px;
 }
 body {
     background-image: url(https://img.freepik.com/free-vector/blue-abstract-acrylic-brush-stroke-textured-background_53876-86373.jpg?size=626&ext=jpg)
@@ -16,6 +17,8 @@ nav {
 p {
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
+    padding: 0px;
+    margin: 3px;
 }
 .container {
     width: 960px;
@@ -28,4 +31,16 @@ p {
 }
 button {background-color:#4aaaa5;
 color: white;
+}
+#message {
+    height: 100px;
+    width:900px;
+    overflow: scroll;
+    }
+#name {
+    width: 900px;
+}
+#email {
+    width: 900px;
+}
 }
