--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -7,3 +7,19 @@ header {
 body {
     background-image: url(https://img.freepik.com/free-vector/blue-abstract-acrylic-brush-stroke-textured-background_53876-86373.jpg?size=626&ext=jpg)
 }
+img {
+    width: 200px;
+    height: 200px;
+}
+.container {
+    width: 960px;
+    height: auto;
+    background-color:#ffffff;
+    border: solid 2px #dddddd;
+    padding-left: 20px;
+    padding-bottom: 20px;  
+    margin: auto;
+}
+table {
+    width: 500px;
+}
