--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -11,7 +11,9 @@ h2 {
     color:#4aaaa5;
 }
 nav {
-    float: right;
+    position: absolute;
+    right: 30px;
+    top: 35px;
     font-family: Arial, Helvetica, sans-serif;
 }
 p {
@@ -42,4 +44,13 @@ color: white;
 }
 #email {
     width: 900px;
+}
+a:link {
+    text-decoration: none;
+}
+h1 {
+background-color:#4aaaa5;
+    color: white;
+    max-width: 250px;
+    margin-left: 45px;
 }
