--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -3,6 +3,8 @@ header {
     border: 3px solid #cccccc;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-bottom:50px;
+    margin-top: 0;
+    padding: 0;
 }
 body {
     background-image: url(https://img.freepik.com/free-vector/blue-abstract-acrylic-brush-stroke-textured-background_53876-86373.jpg?size=626&ext=jpg)
@@ -22,4 +24,23 @@ img {
 }
 table {
     width: 500px;
+}
+nav {
+    position: absolute;
+    right: 30px;
+    top: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    
+    }
+h2 {
+    color:#4aaaa5;
+    }
+    a:link {
+        text-decoration: none;
+    }
+h1 {
+    background-color:#4aaaa5;
+    color: white;
+    max-width: 250px;
+    margin-left: 45px;
 }
